// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Checkbox Checkbox 1`] = `
<label
  className="sc-bZQynM emjIID"
  label="Label"
>
  <span
    className="sc-htoDjs kMcWdn"
  >
    <div
      className="sc-iwsKbI jBnJBr"
    >
      <svg
        height="12"
        onClick={[Function]}
        viewBox="0 0 1024 1024"
        width="12"
      >
        <path
          d="M954.857 323.429c0 14.286-5.714 28.571-16 38.857l-491.429 491.429c-10.286 10.286-24.571 16-38.857 16s-28.571-5.714-38.857-16l-284.571-284.571c-10.286-10.286-16-24.571-16-38.857s5.714-28.571 16-38.857l77.714-77.714c10.286-10.286 24.571-16 38.857-16s28.571 5.714 38.857 16l168 168.571 374.857-375.429c10.286-10.286 24.571-16 38.857-16s28.571 5.714 38.857 16l77.714 77.714c10.286 10.286 16 24.571 16 38.857z"
          fill="#0E86FE"
        />
      </svg>
    </div>
  </span>
  <span
    className="sc-gzVnrw kqlmMC"
  >
    <input
      checked={false}
      className="sc-dnqmqq jRkzfi"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    Label
  </span>
</label>
`;

exports[`Storyshots Components | Checkbox CheckboxGroup 1`] = `
<div
  className="sc-EHOje jvzENE"
>
  <label
    className="sc-bZQynM emjIID"
    label="Label"
  >
    <span
      className="sc-htoDjs kMcWdn"
    >
      <div
        className="sc-iwsKbI jBnJBr"
      >
        <svg
          height="12"
          onClick={[Function]}
          viewBox="0 0 1024 1024"
          width="12"
        >
          <path
            d="M954.857 323.429c0 14.286-5.714 28.571-16 38.857l-491.429 491.429c-10.286 10.286-24.571 16-38.857 16s-28.571-5.714-38.857-16l-284.571-284.571c-10.286-10.286-16-24.571-16-38.857s5.714-28.571 16-38.857l77.714-77.714c10.286-10.286 24.571-16 38.857-16s28.571 5.714 38.857 16l168 168.571 374.857-375.429c10.286-10.286 24.571-16 38.857-16s28.571 5.714 38.857 16l77.714 77.714c10.286 10.286 16 24.571 16 38.857z"
            fill="#0E86FE"
          />
        </svg>
      </div>
    </span>
    <span
      className="sc-gzVnrw kqlmMC"
    >
      <input
        checked={false}
        className="sc-dnqmqq jRkzfi"
        defaultChecked={false}
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      Label
    </span>
  </label>
  <label
    className="sc-bZQynM emjIID"
    label="Label"
  >
    <span
      className="sc-htoDjs kMcWdn"
    >
      <div
        className="sc-iwsKbI jBnJBr"
      >
        <svg
          height="12"
          onClick={[Function]}
          viewBox="0 0 1024 1024"
          width="12"
        >
          <path
            d="M954.857 323.429c0 14.286-5.714 28.571-16 38.857l-491.429 491.429c-10.286 10.286-24.571 16-38.857 16s-28.571-5.714-38.857-16l-284.571-284.571c-10.286-10.286-16-24.571-16-38.857s5.714-28.571 16-38.857l77.714-77.714c10.286-10.286 24.571-16 38.857-16s28.571 5.714 38.857 16l168 168.571 374.857-375.429c10.286-10.286 24.571-16 38.857-16s28.571 5.714 38.857 16l77.714 77.714c10.286 10.286 16 24.571 16 38.857z"
            fill="#0E86FE"
          />
        </svg>
      </div>
    </span>
    <span
      className="sc-gzVnrw kqlmMC"
    >
      <input
        checked={false}
        className="sc-dnqmqq jRkzfi"
        defaultChecked={false}
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      Label
    </span>
  </label>
  <label
    className="sc-bZQynM emjIID"
    label="Label"
  >
    <span
      className="sc-htoDjs kMcWdn"
    >
      <div
        className="sc-iwsKbI jBnJBr"
      >
        <svg
          height="12"
          onClick={[Function]}
          viewBox="0 0 1024 1024"
          width="12"
        >
          <path
            d="M954.857 323.429c0 14.286-5.714 28.571-16 38.857l-491.429 491.429c-10.286 10.286-24.571 16-38.857 16s-28.571-5.714-38.857-16l-284.571-284.571c-10.286-10.286-16-24.571-16-38.857s5.714-28.571 16-38.857l77.714-77.714c10.286-10.286 24.571-16 38.857-16s28.571 5.714 38.857 16l168 168.571 374.857-375.429c10.286-10.286 24.571-16 38.857-16s28.571 5.714 38.857 16l77.714 77.714c10.286 10.286 16 24.571 16 38.857z"
            fill="#0E86FE"
          />
        </svg>
      </div>
    </span>
    <span
      className="sc-gzVnrw kqlmMC"
    >
      <input
        checked={false}
        className="sc-dnqmqq jRkzfi"
        defaultChecked={false}
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      Label
    </span>
  </label>
</div>
`;
